--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,113 @@ main {
 	border-radius: 10px;
 }
 
+/*** VAN PAGES ***/
+.van-list-container {
+	padding-inline: 23px;
+}
+
+.van-list {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	justify-items: center;
+	gap: 34px;
+	margin-top: 57px;
+}
+
+.van-title a {
+	color: #161616;
+	text-decoration: none;
+}
+
+.van-title img {
+	max-width: 100%;
+	border-radius: 5px;
+}
+
+.van-type {
+	height: 34px;
+	padding: 6px 26px;
+	font-style: normal;
+	font-weight: 500;
+	border: none;
+	border-radius: 5px;
+	background-color: #ffead0;
+	color: #4d4d4d;
+	transition: 200ms all cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.van-type:hover {
+	color: #ffead0;
+}
+
+.van-type:focus {
+	outline: none;
+}
+
+.van-type.selected {
+	color: #ffead0;
+}
+
+.van-type.simple:hover,
+.van-type.simple.selected {
+	background-color: #e17654;
+}
+
+.van-type.rugged:hover,
+.van-type.rugged.selected {
+	background-color: #115e59;
+}
+
+.van-type.luxury:hover,
+.van-type.luxury.selected {
+	background-color: #161616;
+}
+
+i[class*='van-type-'] {
+	padding: 7px 14px;
+}
+
+/*** VAN-DETAIL PAGE ***/
+.van-detail-container {
+	padding: 27px;
+}
+
+.van-detail {
+	display: flex;
+	flex-direction: column;
+	color: #161616;
+}
+
+.van-detail img {
+	border-radius: 5px;
+	margin-block: 47px;
+}
+
+.van-detail h2 {
+	font-size: 2rem;
+	margin-bottom: 10px;
+}
+
+.van-detail > i {
+	align-self: flex-start;
+}
+
+.van-detail .van-price {
+	font-size: 1.25rem;
+	margin-bottom: 10px;
+}
+
+.van-detail .van-price span {
+	font-weight: 700;
+	font-size: 1.5rem;
+}
+
+.van-detail .link-button {
+	background-color: #ff8c38;
+	color: white;
+	font-size: 1.125rem;
+}
+
 /****** FOOTER PAGE ******/
 footer {
 	background-color: #161616;
