--- a/src/App.css
+++ b/src/App.css
@@ -272,6 +272,145 @@ i[class*='van-type-'] {
 	font-size: 1.125rem;
 }
 
+/****** HOSTLAYOUT ******/
+.host-nav {
+	display: flex;
+	margin-bottom: 30px;
+}
+
+.host-nav a {
+	text-decoration: none;
+	color: #4d4d4d;
+	font-weight: 500;
+	padding: 5px 20px;
+}
+
+.host-nav a:hover {
+	color: #161616;
+	text-decoration: underline;
+	font-weight: 600;
+}
+
+/****** HOSTVANS PAGE ******/
+.host-vans-title {
+	padding-inline: 26px;
+}
+
+.host-vans-list {
+	padding-inline: 26px;
+}
+
+.host-van-link-wrapper {
+	color: unset;
+	text-decoration: unset;
+}
+
+.host-van-single {
+	display: flex;
+	align-items: center;
+	background-color: white;
+	margin-bottom: 15px;
+	padding-block: 18px;
+	padding-left: 24px;
+}
+
+.host-van-single > img {
+	height: 70px;
+	border-radius: 5px;
+	margin-right: 17px;
+}
+
+.host-van-info h3 {
+	font-size: 20px;
+	font-weight: 600;
+	margin-block: 10px;
+}
+
+.host-van-info p {
+	margin-block: 10px;
+}
+
+/****** HOSTVANDETAIL PAGE ******/
+.host-van-detail-layout-container {
+	background-color: white;
+	padding: 24px;
+	margin: 30px 26px;
+}
+
+.host-van-detail {
+	display: flex;
+	align-items: center;
+}
+
+.host-van-detail > img {
+	height: 160px;
+	border-radius: 5px;
+	margin-right: 20px;
+}
+
+.host-van-detail-info-text > h3 {
+	margin-top: 24px;
+	margin-bottom: 5px;
+	font-size: 26px;
+	font-weight: 700;
+}
+
+.host-van-detail-info-text > h4 {
+	font-size: 20px;
+	margin-block: 0;
+}
+
+.host-van-detail-nav {
+	display: flex;
+	margin-block: 25px;
+}
+
+.host-van-detail-nav a {
+	text-decoration: none;
+	color: #4d4d4d;
+	font-weight: 500;
+	padding: 5px 20px;
+}
+
+.host-van-detail-nav a:first-of-type {
+	text-decoration: none;
+	color: #4d4d4d;
+	font-weight: 500;
+	padding: 5px 15px;
+	margin-left: -15px;
+}
+
+.host-van-detail-nav a:hover {
+	color: #161616;
+	text-decoration: underline;
+	font-weight: 700;
+}
+
+.host-van-detail-info > h4 {
+	font-weight: 700;
+	font-size: 14px;
+	line-height: 21px;
+}
+
+.host-van-detail-info > h4 > span {
+	font-weight: 500;
+}
+
+.host-van-price {
+	font-size: 24px;
+	font-weight: 500;
+}
+
+.host-van-price > span {
+	font-size: 16px;
+	color: #4d4d4d;
+}
+
+.host-van-detail-image {
+	height: 100px;
+	border-radius: 5px;
+}
+
 /****** FOOTER PAGE ******/
 footer {
 	background-color: #161616;
