--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,18 @@ body {
 	transform: translate(1px, 1px);
 }
 
+.back-button {
+	display: block;
+	color: black;
+	text-decoration: none;
+	margin-top: 60px;
+	margin-left: 26px;
+}
+
+.back-button span:hover {
+	text-decoration: underline;
+}
+
 /****** HEADER PAGE ******/
 header {
 	height: 110px;
@@ -257,6 +269,15 @@ i[class*='van-type-'] {
 /*** VAN-DETAIL PAGE ***/
 .van-detail-container {
 	padding: 27px;
+}
+
+.van-detail-container .back-button {
+	color: black;
+	text-decoration: none;
+}
+
+.van-detail-container .back-button span {
+	text-decoration: underline;
 }
 
 .van-detail {
