Setting up for authentication

--- a/src/App.css
+++ b/src/App.css
@@ -234,6 +234,11 @@ main {
 	font-family: 'Inter', sans-serif;
 }
 
+.login-form > button:disabled {
+	background-color: #aaaaaa;
+	cursor: not-allowed;
+}
+
 .red {
 	color: #cc0000;
 }
